# onnxruntime_dart

./: .gitignore  .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: onnxruntime_dart.podspec
ios/Classes/: OnnxruntimeDartPlugin.swift
lib/: onnxruntime_dart.dart  onnxruntime_dart_bindings_generated.dart  onnxruntime_dart_method_channel.dart  onnxruntime_dart_platform_interface.dart  onnxruntime_dart_web.dart
lib/bindings/: onnxruntime_dart_bindings_generated.dart
lib/dart_interface/: onnxruntime.dart  onnxruntime_lib.dart
linux/: CMakeLists.txt  onnxruntime_dart_plugin.cc  onnxruntime_dart_plugin_private.h
linux/test/: onnxruntime_dart_plugin_test.cc
macos/: onnxruntime_dart.podspec
macos/Classes/: OnnxruntimeDartPlugin.swift  onnxruntime_dart.c
src/: CMakeLists.txt  onnxruntime_dart.c
test/: onnxruntime_dart_method_channel_test.dart  onnxruntime_dart_test.dart
windows/: CMakeLists.txt  onnxruntime_dart_plugin.cpp  onnxruntime_dart_plugin.h  onnxruntime_dart_plugin_c_api.cpp
windows/test/: onnxruntime_dart_plugin_test.cpp
(+18 files in other folders)
